First Changes For Münster

--- a/content/status.yaml
+++ b/content/status.yaml
@@ -1,5 +1,5 @@
 ---
   text: |
-    Our Berlin Techies are hard at work on <span class="highlighted">finishing their projects</span>.<br/>
-    Remember to submit your results until <span class="highlighted">Sunday, July 19th</span>!
+    Testing <span class="highlighted">for the Münster Location</span>.<br/>
+    Amazing <span class="highlighted">:D</span>!
   links: []
