--- a/content/links.yaml
+++ b/content/links.yaml
@@ -1,7 +1,7 @@
 ---
-  HXW: "https://techlabs.org/location/Berlin"
-  NBY: "https://join.slack.com/t/techlabsberlin/shared_invite/zt-drvroxg4-X1ASXi1MooLdIM8z_QWQ9A" # valid 30 days from 2020-04-20
-  C2R: "https://meet.google.com/hts-nbqy-kop" # Kick Off
+  HXW: "https://techlabs.org/location/Muenster"
+  NBY: ""
+  C2R: ""
   V53: "https://meet.google.com/vam-djgi-iof" # Kick Off - Break Out AI
   BN9: "https://meet.google.com/ept-mmdn-nyx" # Kick Off - Break Out DS
   LDU: "https://meet.google.com/aep-cocb-wyq" # Kick Off - Break Out UX
