--- a/content/milestones.yaml
+++ b/content/milestones.yaml
@@ -1,54 +1,7 @@
 ---
-- slug: apply
-  name: Apply for Summer Term 2020
-  date: "2020-04-17T23:59:59+02:00"
-  description: |
-    You can apply for TechLabs Berlin **until Friday, April 17**. All you need to do is to complete the application
-    form linked below.
-
-    Please note that the survey consists of several questions, some of them require you to reflect on yourself.
-    This is intentional and ensures that we can build a community of very smart and motivated learners.
-    In that way you can be sure that your learning experience will be awesome and that you'll all have a great time.
-    On the other hand, it also means you'll have to invest 20 to 30 minutes. But it'll be worth it, we promise!
-  todos:
-  - name: Submit Your Application
-    resources:
-      - title: Application Form
-        type: feedback
-        url: https://techlabsorg.typeform.com/to/voTAXD
-
-- slug: register
-  name: Register for Summer Term 2020
-  date: "2020-04-23T19:00:00+02:00"
-  description: |
-    We're happy that you want to join our community. To get you started quickly, we have some tasks you need to do.
-
-    Please make sure to attend our Kick-Off Event because you will be given the most important information to
-    join TechLabs.
-  todos:
-  - name: Complete the Registration Form
-    resources:
-      - title: Registration Form
-        type: typeform
-        url: https://techlabsorg.typeform.com/to/U2RDGg
-  - name: Join our Slack Community
-    resources:
-      - title: Join Slack
-        type: tool
-        url: https://bln.techlabs.org/NBY
-  - name: Subscribe to our Calendar
-    resources:
-      - title: Web
-        type: calendar
-        url: https://bln.techlabs.org/FBN
-      - title: iCal
-        type: calendar
-        url: https://bln.techlabs.org/G5W
-  - name: Attend the Kick-Off Event at Thursday, April 23 at 20:00 CEST
-
 - slug: choose-track
   name: Choose Your TechLabs Track
-  date: "2020-04-26T23:59:59+02:00"
+  date: "2020-08-20T23:59:59+02:00"
   description: |
     Now it is the time to choose if you want to learn Data Science, Artificial Intelligence, Web Development or
     User Experience Design.
@@ -103,6 +56,23 @@
     - title: "Coursera – UX Design: From Concept to Prototype"
       type: tool
       url: https://de.coursera.org/learn/ux-design-concept-wireframe
+- slug: apply
+  name: Apply for Winter Term 2020-2021
+  date: "2020-08-08T23:59:59+02:00"
+  description: |
+    You can apply for TechLabs Berlin **until Saturday**. All you need to do is to complete the application
+    form linked below.
+
+    Please note that the survey consists of several questions, some of them require you to reflect on yourself.
+    This is intentional and ensures that we can build a community of very smart and motivated learners.
+    In that way you can be sure that your learning experience will be awesome and that you'll all have a great time.
+    On the other hand, it also means you'll have to invest 20 to 30 minutes. But it'll be worth it, we promise!
+  todos:
+  - name: Submit Your Application
+    resources:
+      - title: Application Form
+        type: feedback
+        url: https://techlabsorg.typeform.com/to/nP8sGW
 
 - slug: project-preference-submission
   name: Project Preference Submission
@@ -119,7 +89,7 @@
 
 - slug: project-submission
   name: Project Submission
-  date: "2020-07-19T23:59:59+02:00"
+  date: "2020-09-19T23:59:59+02:00"
   description: |
     You did some nice work and now is the time to show it off! After you've
     finished your implementation, you will officially submit your project to us
