Sets up the page to be used by the CodeAtHome Team
First set of changes to the Berlin Version, to be used by the CodeAtHome Team

--- a/content/media.yaml
+++ b/content/media.yaml
@@ -1,11 +1,6 @@
 ---
-- title: Test KickOff
-  youtubeURL: https://www.youtube-nocookie.com/embed/TSXyJbCmGto
-  date: "2020-09-10"
+- title: Future Tech Skills
+  youtubeURL: https://www.youtube-nocookie.com/embed/9bINHZ0_-9M
+  date: "2020-04-01"
   description: |
-    This is a warm welcome from your TechLabs Münster team. In this
-    video, we introduce TechLabs, our Digital Shaper program with its
-    four tracks: Data Science, Artificial Intelligence, Web
-    Development and User Experience Design. We discuss how we will
-    structure our upcoming semester, how you can participate and what
-    you need to do to get your Digital Shaper certificate.
+    Talk by David Middelbeck and Isabell Fries
