--- a/content/status.yaml
+++ b/content/status.yaml
@@ -1,5 +1,5 @@
 ---
   text: |
-    Testing <span class="highlighted">for the Münster Location</span>.<br/>
-    Amazing <span class="highlighted">:D</span>!
+    The second #codeathome bootcamp will start on the<span class="highlighted"> 1st of September 2020</span>.</br>
+    Applications will open on the<span class="highlighted"> 15th of August 2020</span>!
   links: []
