Corrects The Text of the Applications card

--- a/content/events/application-phase.yaml
+++ b/content/events/application-phase.yaml
@@ -3,7 +3,7 @@
   name: Aplications will be open soon!
   date: "2020-08-15T20:00:00+02:00"
   description: |
-    This is where your Digital Shaper Journey will start. We'll give you a summary on all you need to know to master your track.
+    We will be posting the application form here, stay tuned!
 
   #  Our topics include:
 
